# SynthPlayground

./: .gitignore
CommandStackLib/: CMakeLists.txt  CommandStack.cpp  CommandStack.h  CommandStackController.cpp  CommandStackController.h  CommandStackDistributor.h  CommandStackHandlerI.h  CommandStackImporter.cpp  CommandStackImporter.h  CommandStackItem.cpp  CommandStackItem.h  CommandStackLib.pro  ExecuteCommandStackHandler.cpp  ExecuteCommandStackHandler.h  ExportCommandStackHandler.cpp  ExportCommandStackHandler.h  ImporterI.h  LogCommandStackHandler.cpp  LogCommandStackHandler.h  RegisterNamedCommandStackHandlerI.h  StackCommandStackHandler.cpp  StackCommandStackHandler.h
IntSynthLib/: CMakeLists.txt  IntBinaryPattern.h  IntCombinedOperator.h  IntCombinedOperatorV2.h  IntCombinorFactory.h  IntCombinors.h  IntEnvelope.h  IntFeedbackDelay.h  IntKarplusStrong.h  IntModulatedCombinors.h  IntMultiSaw.h  IntMultiStageEnvelope.h  IntMultiStageEnvelope2.h  IntOnePoleFilter.h  IntOperatorFactory.h  IntOperators.h  IntPhaseGenerator.h  IntScaledValue.h  IntSimpleOscillator.h  IntSynthLib.pro  IntUtilities.h  UintSkewedPhasor.h
JackLib/: CMakeLists.txt  IConnectionChangedListener.h  JackAudioOutput.cpp  JackAudioOutput.h  JackConnectionManager.cpp  JackConnectionManager.h  JackIOManager.cpp  JackIOManager.h  JackLib.pro  JackMidiHandler.cpp  JackMidiHandler.h  JackMidiRenderer.cpp  JackMidiRenderer.h  JackMidiSource.cpp  JackMidiSource.h  JackWin32Port.h
JackMidiLoggerTool/: CMakeLists.txt  JackMidiLoggerTool.pro  main.cpp
MidiLib/: AlsaMidiInput.cpp  AlsaMidiInput.h  CMakeLists.txt  CommandStackMidiInputHandler.cpp  CommandStackMidiInputHandler.h  LogMidiInputHandler.cpp  LogMidiInputHandler.h  MidiHandlerI.h  MidiInputController.cpp  MidiInputController.h  MidiInputHandlerI.h  MidiLib.pro  MidiNotePitch.cpp  MidiNotePitch.h  MidiRendererI.h  MidiSourceI.h  MultiMidiHandler.cpp  MultiMidiHandler.h  NoteActiveMidiHandler.cpp  NoteActiveMidiHandler.h  NoteCountMidiHandler.cpp  NoteCountMidiHandler.h  NoteQueueMidiInputHandler.cpp  NoteQueueMidiInputHandler.h  RawMidiParser.cpp  RawMidiParser.h  notecountmidiinputhandler.cpp  notecountmidiinputhandler.h
ModularHeadless/: CMakeLists.txt  ModularHeadless.pro  ModularHeadlessController.cpp  ModularHeadlessController.h  main.cpp
ModularWeb/: CMakeLists.txt  FileSystemHelpers.cpp  FileSystemHelpers.h  ModularWeb.pro  ModularWebController.cpp  ModularWebController.h  PatchManager.cpp  PatchManager.h  WebPageHelpers.cpp  WebPageHelpers.h  WebPageManager.cpp  WebPageManager.h  WebPageModuleParameterVisitor.cpp  WebPageModuleParameterVisitor.h  WebRequest.cpp  WebRequest.h  main.cpp
ModularWebApp/: CMakeLists.txt  JsonHelpers.cpp  JsonHelpers.h  ModularController.cpp  ModularController.h  ModularWebApp.pro  ModularWebController.cpp  WebPageModuleParameterVisitor.cpp  WebPageModuleParameterVisitor.h  main.cpp
PatchConverterTool/: CMakeLists.txt  ModularHeadless.pro  PatchConverterTool.pro  main.cpp
PatchLib/: CMakeLists.txt  PatchLib.pro  PatchManager.h  PatchReader.cpp  PatchReader.h  PatchWriter.cpp  PatchWriter.h
Serial2AlsaMidiTool/: CMakeLists.txt  Serial2AlsaMidiTool.pro  main.cpp
SynthLib/: 8BitFX.h  ADEnvelope.h  ADSREnvelope.h  AEnvelope.h  AREnvelope.h  AREnvelopeI.h  ASREnvelope.h  Amp.h  AsymmetricAmp.h  AudioFilterI.h  AudioRendererI.h  AudioSource2I.h  AudioSourceI.h  BasicEnvelope.h  BinaryOscillator.h  BitFxI.h  BpmPeriod.h  BufferHandlerI.h  CMakeLists.txt  CPosNegShaper.h  CenteredShaper.h  Chebishev.h  ClockPulse.h  CombFilter.h  CombinedFoldedOperatorStage.h  CombinedFoldedOperatorStageI.h  CombinedOperator.h  CombinedOperatorStage.h  CombinedOperatorStageI.h  Combinor.h  ConstGenerator.h  ConstNumSamplesGenerator.h  ContinuousThreadRunner.h  Controller.cpp  Controller.h  ControllerChange.h  Conversions.h  CrossFader.h  DCOperator.h  DecayEnvelope.h  (+133 more)
SynthLib/Controllers/: EffectsAppController.cpp  EffectsAppController.h  KeyboardController.cpp  KeyboardController.h  RingSequencerController.cpp  RingSequencerController.h  ScopeController.cpp  StepSequencerController.cpp  StepSequencerController.h  Synth10Controller.cpp  Synth10Controller.h  Synth11Controller.cpp  Synth11Controller.h  Synth12Controller.cpp  Synth12Controller.h  (+6 more)
Synths/: CMake.Debug.config  CMake.Release.config  CMakeLists.txt  ModularSynths.pro  Synths.pro  SynthsWin32.pro
TestCommandStackLib/: CMakeLists.txt  TestCommandStackDistributor.cpp  TestCommandStackItem.cpp  TestCommandStackLib.pro
TestIntSynthLib/: CMakeLists.txt  TestIntBinaryPattern.cpp  TestIntCombinedOperator.cpp  TestIntCombinedOperatorV2.cpp  TestIntCombinors.cpp  TestIntConversions.cpp  TestIntEnvelope.cpp  TestIntMultiSaw.cpp  TestIntMultiStageEnvelope.cpp  TestIntMultiStageEnvelope2.cpp  TestIntOnePoleFilter.cpp  TestIntOperatorFactory.cpp  TestIntOperators.cpp  TestIntPhaseGenerator.cpp  TestIntScaledValue.cpp  TestIntSimpleOscillator.cpp  TestIntSynthLib.pro
TestModularLib/: CMakeLists.txt  TestBasicSamplerFilter.cpp  TestModularLib.pro  TestMultiStepSequencerFilter.cpp  TestPhasorFilter.cpp
TestSynthLib/: CMakeLists.txt  TestADSREnvelope.cpp  TestAREnvelope.cpp  TestBufferGrabber.cpp  TestClockPulse.cpp  TestCombinedOperator.cpp  TestConstNumSamplesGenerator.cpp  TestDecayEnvelope.cpp  TestDelayLine.cpp  TestDelayLine2.cpp  TestDetune.cpp  TestFMFrequencyModulator.cpp  TestFMOperatorStage.cpp  TestFeedbackDelay.cpp  TestGlitchOperator.cpp  TestGrainBank.cpp  TestIntegerCombinors.cpp  TestIntegerOnePoleFilter.cpp  TestIntegerPhaseGenerator.cpp  TestLinSegOperator.cpp  TestMultiStepSequencer.cpp  TestNoise.cpp  TestNotes.cpp  TestOnePoleFilter.cpp  TestOneVoltPerOctave.cpp  TestPerdiodicTicker.cpp  TestPeriodicConstGenerator.cpp  TestPeriodicSampleGrabber.cpp  TestPhaseShifter.cpp  TestPitch.cpp  TestPolyKarplusStrong.cpp  TestPosNegShaper.cpp  TestRampUp.cpp  TestRandomGate.cpp  TestReadWriteBuffer.cpp  TestSimpleReadWriteBuffer.cpp  TestSlewLimiter.cpp  TestStepSequencer2.cpp  TestSynth12Controller.cpp  TestSynthLib.pro  (+7 more)
UnitTest/: CMakeLists.txt  UnitTest.pro
(+1626 files in other folders)
