cmake_minimum_required (VERSION 2.6)
project (SynthLib)
ADD_DEFINITIONS(
	-std=c++11 # or -std=c++0x
	# other flags
)

include_directories(
        .
        ./Interfaces
	./Granular
	./../MidiLib)
#todo if win32 include path to jack!

add_library(SynthLib
    Notes.cpp
    Pitch.cpp
    SelectableCombinorFactory.cpp
    SelectableOperatorFactory.cpp
    StepSequencer2.cpp
    Controllers/ScopeController.cpp
    periodicsamplegrabberproxy.cpp
    WavFileReader.cpp
    ReadWavFile.cpp
    MidiNoteConverter.cpp
    Granular/GrainUtilities.cpp
    Notes.h
    Combinor.h
    ConstGenerator.h
    Conversions.h
    CrossFader.h
    FeedbackOperator.h
    FlipOperator.h
    FullPseudoSin.h
    HardKneeShaper.h
    InvSquare.h
    MirrorOperator.h
    NonLinearShaper.h
    NoOp.h
    OnePoleFilter.h
    PhaseDecreaseCondition.h
    PhaseStep.h
    Pitch.h
    PseudoSin.h
    RampDown.h
    RampUp.h
    ReadWavFile.h
    SampleGrabber.h
    SelectableCombinor.h
    SelectableCombinorFactory.h
    SelectableOperator.h
    SelectableOperatorFactory.h
    Square.h
    SquareWave.h
    SymmetricalOperator.h
    Triangle.h
    ScopeI.h
    WaveFolder.h
    WriteWavFile.h
    PeriodicConstGenerator.h
    StepSequencer2.h
    PeriodicTicker.h
    Amp.h
    Modulator.h
    LFO.h
    DelayLine.h
    FeedbackDelay.h
    AREnvelope.h
    ConstNumSamplesGenerator.h
    PeriodicSampleGrabber.h
    Controllers/ScopeController.h
    PeriodicSampleGrabberI.h
    periodicsamplegrabberproxy.h
    FMOperatorStage.h
    PhaseSkewer.h
    DCOperator.h
    RampUpDown.h
    SquareQuadratic.h
    IntegerPowerShaper.h
    PowerLawDistortion.h
    ASREnvelope.h
    ADEnvelope.h
    Inverter.h
    ADSREnvelope.h
    BpmPeriod.h
    PosNegShaper.h
    WaveTable.h
    WavFileReader.h
    MidiNoteConverter.h
    SimpleOscillator.h
    LinSegOperator.h
    Detuner.h
    WaveFolder2.h
    PeriodicTrigger.h
    Gate.h
    Noise.h
    SampleAndHold.h
    GlitchOperator.h
    EnvelopeFollower.h
    DelayLine2.h
    AsymmetricAmp.h
    MultiStepSequencer.h
    Trigger.h
    DecayEnvelope.h
    ClockPulse.h
    FMFrequencyModulator.h
    RandomGate.h
    Limiter.h
    SlewLimiter.h
    OneVoltPerOctave.h
    Granular/Grain.h
    Granular/GrainBank.h
    Granular/GrainTrigger.h
    Granular/BufferGrabber.h
    Granular/GrainWindow.h
    Granular/GrainUtilities.h
    PhaseShifter.h
    wavetable2.h
    WaveTables/WaveTableData.h
    karplusstrong.h
    ToggleGate.h
    PhaseAccumulator.h
    MultiStepSequencer.cpp
    ToggleGate.h
    RingSequencer.h
    ControllerChange.h
    Scaler.h
    ReadWriteBuffer.h
    simplereadwritebuffer.h
    BinaryOscillator.h
    Pulse.h
    WaveShaperA116.h
    CombinedOperator.h
)

